<?xml version="1.0" encoding="utf-8"?>

<!--    App:   WITSWARZONE-->
<!--    Names: Emilio Cruz, William Siri-->
<!--    Date: May 2023-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" >

        <TextView
            android:id="@+id/chooseCategoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Choose Category\n"
            android:textColor="#000000"
            android:textSize="35sp" />
    </FrameLayout>
    <RadioGroup
        android:id="@+id/lengthRadioGroup"
        android:checkedButton="@id/radio5"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions_5" />

        <RadioButton
            android:id="@+id/radio15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions_15"/>

        <RadioButton
            android:id="@+id/radio30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questions_30"/>
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="0.80" />

</LinearLayout>